Added container div with restart button

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
         <div id="score_div">
                 Score: <span id="score">0</span>
         </div>
+        <div id="container">
+
+            <div id="restart_div">
+                <button id="restart">
+                    Restart<br>
+                    <small class="small_text">(press Enter)</small>
+                </button>
+            </div>
+        </div>
         
         <script src="script.js"></script>
     </body>
