Added road lines div and comments

--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
         <script src="jquery-3.4.1.min.js"></script>
     </head>
     <body>
+        <!-- Score box -->
         <div id="score_div">
                 Score: <span id="score">0</span>
         </div>
         <div id="container">
+
+             <!-- Road lines -->
+            <div id="line_1" class="line"></div>
+            <div id="line_2" class="line"></div>
+            <div id="line_3" class="line"></div>
 
             <div id="restart_div">
                 <button id="restart">
