--- a/index.html
+++ b/index.html
@@ -16,10 +16,20 @@
         </div>
         <div id="container">
 
-             <!-- Road lines -->
+            <!-- Road lines -->
             <div id="line_1" class="line"></div>
             <div id="line_2" class="line"></div>
             <div id="line_3" class="line"></div>
+            <div id="car" class="car">
+                <div class="f_glass"></div>
+                <div class="b_glass"></div>
+                <div class="f_light_l"></div>
+                <div class="f_light_r"></div>
+                <div class="f_tyre_l"></div>
+                <div class="f_tyre_r"></div>
+                <div class="b_tyre_l"></div>
+                <div class="b_tyre_r"></div>
+            </div>
 
             <div id="restart_div">
                 <button id="restart">
