--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <script src="jquery-3.4.1.min.js"></script>
     </head>
     <body>
+        <div id="help">
+                <p>Controls: Right, Left, Up & Down arrow keys.</p>
+        </div>
         <!-- Score box -->
         <div id="score_div">
                 Score: <span id="score">0</span>
